@@ -1,5 +1,6 @@
 [0.1.2+SVN]
 * OTAdmin protocol support. <wrzasq>
+* Supports bank balance. <wrzasq>
 * getStorage()/setStorage() methods in OTS_Player class. <wrzasq>
 * More secured. <wrzasq>
 * Fixed buffered streams to use little-endian storage (like Open Tibia does). <wrzasq>
